--- a/css/styles.css
+++ b/css/styles.css
@@ -71,11 +71,11 @@ span{
     bottom:-35px;
     left: 0;
 }
-.link{
+.pages-list a{
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.link :focus,
-.link :hover{
+.pages-list a:hover,
+.pages-list a:focus{
     color: #2196F3;
 }
 .contacts{
@@ -110,6 +110,8 @@ background-color:#2F303A;
 padding: 200px 0px;
 background-image: linear-gradient(to left,rgba(47,48,58,0.4), rgba(47,48,58,0.4)) , url("../images/images-studio/back.jpg");
 background-repeat: no-repeat;
+background-position: center;
+max-width: 1600;
 background-size: cover;
 }
 .service h1{
@@ -147,11 +149,6 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .service button:focus,
 .service button:hover{
     background-color: #F5F4FA;
-}
-div[data-model]{
-    position: absolute;
-    width:100vw;
-    height:100vh ;
 }
 .box{
     padding: 30px 32px;
@@ -260,7 +257,7 @@ margin-bottom: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
-    transition: background-color fill 250ms cubic-bezier(0.4, 0, 0.2, 1);}
+    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);}
     .icon a:hover,
     .icon a:focus{
         background-color: #2196F3;
@@ -324,7 +321,7 @@ border-radius: 0px 0px 4px 4px;
     fill: #afb1b8;
     border:1px solid rgba(175, 177, 184, 1) ;
     border-radius: 4px;
-    transition: fill border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: border,fill 250ms,250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients a:hover,
@@ -360,7 +357,7 @@ background-color: #F5F4FA;
 cursor: pointer;
 font-family:'Roboto';
 padding: 6px 22px;
-transition: colo background-color box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+transition: background-color,color,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .catalog button:hover,
 .catalog button:focus{
@@ -459,6 +456,12 @@ p[class="overlay"]{
     top:8px;
     right: 8px;
 }
+.is-hidden{
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    translate: opacity 250ms ubic-bezier(0.4, 0, 0.2, 1);
+}
 /*footer styles*/
 footer{
 background-color:#2F303A;
@@ -496,6 +499,7 @@ a[target]{
     color: #FFFFFF;
     text-decoration: none;
     margin-right: 70px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .mail{
 font-size: 14px;
@@ -551,7 +555,7 @@ margin-bottom: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);}
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);}
     .massenger a:hover,
     .massenger a:focus{
         background-color: #2196F3;
