--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@ ul,h1,h2,h3,h4,h5,h6,p,a,div,img{
 /*header styles*/
 header{
     border-bottom:1px solid #ECECEC;
-    padding: 32px 0;
+    padding: 24px 0;
     background-color: rgba(255, 255, 255, 1);
 }
 .logo{
@@ -68,7 +68,7 @@ span{
     height: 4px;
     background-color: #2196F3;
     border-radius: 2px;
-    bottom:-35px;
+    bottom:-28px;
     left: 0;
 }
 .pages-list a{
@@ -433,7 +433,7 @@ p[class="overlay"]{
     background-color: rgba(0, 0, 0, 0.2);
     top: 0;
     left: 0;
-    transition: opacity,visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal{
     position: absolute;
@@ -445,8 +445,9 @@ p[class="overlay"]{
     height: 581px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
+    padding: 40px 40px;
 }
-.modal button{
+.modal button[data-modal-close]{
     width: 30px;
     height: 30px;
     fill: rgba(0, 0, 0, 1);
@@ -457,10 +458,35 @@ p[class="overlay"]{
     top:8px;
     right: 8px;
 }
+.form-button{
+margin-left: auto;
+margin-right: auto;
+background-color: #2196F3;
+font-weight: 700;
+font-size: 16px;
+line-height: 30px;
+display: flex;
+align-items: center;
+text-align: center;
+letter-spacing: 0.06em;
+color: #FFFFFF;
+border-width: 0;
+border-radius: 4px;
+padding: 10px 55px;
+margin-top: 30px;
+}
+.modal p{
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.1;
+    text-align: center;
+    letter-spacing: 0.03em;
+}
 .is-hidden{
-    opacity: 0;
-    visibility: hidden;
-    pointer-events: none;
+pointer-events: none;
+transform: scale(0);
+visibility: hidden;
+opacity: 0;
 }
 button[data-modal-close]:hover,
 button[date-modal-close]:focus
@@ -600,7 +626,7 @@ form{
     margin-top: auto;
     padding:10px 28px;
     background-color: #2196F3;
-    width: 250px;
+    width: 200px;
     height: 50px;
     color: #fff;
     border-color: transparent;
