--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@ body{
 .section{
     padding: 94px 0px;
 }
-ul,h1,h2,h3,h4,h5,h6,p,a,div,img{
+ul,h1,h2,h3,h4,h5,h6,p,a,div,img,span,input,label{
     margin: 0;
     padding: 0;
 }
@@ -457,8 +457,10 @@ p[class="overlay"]{
     position: fixed;
     top:8px;
     right: 8px;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form-button{
+box-sizing: border-box;
 margin-left: auto;
 margin-right: auto;
 background-color: #2196F3;
@@ -475,12 +477,124 @@ border-radius: 4px;
 padding: 10px 55px;
 margin-top: 30px;
 }
+.modal-form {
+    display: flex;
+    flex-direction: column;
+}
+.modal-form label:not(:nth-last-child(-n+3)){
+    position: relative;
+    margin-bottom: 28px;
+}
 .modal p{
     font-weight: 700;
     font-size: 20px;
     line-height: 1.1;
     text-align: center;
     letter-spacing: 0.03em;
+    margin-bottom: 30px;
+}
+.modal-input ~ span{
+    position: absolute;
+    top:11px;
+    left: 12px;
+    bottom: 11px;
+    fill: #212121;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-input{
+    width: 100%;
+    padding: 11px 0 11px 42px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    box-sizing:border-box;
+    height: 40px;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.up{
+transform: translate(-12px,-28px);
+font-size: 12px;
+line-height: 14px;
+letter-spacing: 0.01em;
+color: #757575;
+}
+.modal-form label:nth-child(3){
+margin-bottom: 10px;
+box-sizing: border-box;
+}
+.checkbox span{
+    font-size: 14px;
+    line-height: 1.7;
+    letter-spacing: 0.03em;
+    color: #2196F3;
+    text-decoration-line:underline;
+}
+.textarea span{
+font-size: 12px;
+line-height: 1.1;
+letter-spacing: 0.01em;
+color: #757575;
+}
+.textarea{
+margin-bottom: 20px;
+box-sizing: border-box; 
+}
+.textarea textarea{
+    margin-top: 4px;
+    width: 448px;
+    height:120px ;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    resize: none;
+    padding: 12px 16px;
+    box-sizing: border-box;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+textarea:focus{
+    outline: none;
+    border-color: #2196F3;
+}
+.modal-input:focus + span,
+.modal-input:focus{
+    fill: #2196F3;
+    border-color:#2196F3;
+    outline: none;
+}
+.checkbox {
+font-size: 14px;
+line-height: 1.7;
+letter-spacing: 0.03em;
+color: #757575;
+display: flex;
+align-items: center;
+justify-content: center;
+}
+input[type="checkbox"]{
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    border: 0;
+    overflow: hidden;
+    clip: rect(0 0 0 0);
+}
+.icon-checkbox{
+    display: inline-block;
+    width: 16px;
+    height: 15px;
+    border: 2px solid #000000;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 4px;
+    margin-right: 8px;
+    transition: border-color,background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+input[type="checkbox"]:checked + .icon-checkbox{
+    border-color: #2196F3;
+    background-image: url('../images/images-studio/icon-check.svg');
+    background-color: #2196F3;
+    background-size: contain;
+    background-origin:content-box;
+    background-position: center;
 }
 .is-hidden{
 pointer-events: none;
