--- a/css/styles.css
+++ b/css/styles.css
@@ -357,7 +357,7 @@ background-color: #F5F4FA;
 cursor: pointer;
 font-family:'Roboto';
 padding: 6px 22px;
-transition: background-color,color,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .catalog button:hover,
 .catalog button:focus{
